--- a/index.html
+++ b/index.html
@@ -8,227 +8,19 @@
   <meta name="CocoaVersion" content="2113.65">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
   </style>
 </head>
 <body>
 <p class="p1">&lt;!DOCTYPE html&gt;</p>
 <p class="p1">&lt;html lang="en"&gt;</p>
 <p class="p1">&lt;head&gt;</p>
-<p class="p1">    &lt;meta charset="UTF-8"&gt;</p>
-<p class="p1">    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</p>
-<p class="p1">    &lt;!-- Pinterest Domain Verification Meta Tag --&gt;</p>
-<p class="p1">    &lt;meta name="p:domain_verify" content="e0a87e13a8b3dc61acbf353802f78442"/&gt;</p>
-<p class="p1">    &lt;title&gt;Health &amp; Wellness Pinterest Claim&lt;/title&gt;</p>
-<p class="p1">    &lt;style&gt;</p>
-<p class="p1">        /* CSS for a calming, wellness-inspired aesthetic */</p>
-<p class="p1">        * {</p>
-<p class="p1">            margin: 0;</p>
-<p class="p1">            padding: 0;</p>
-<p class="p1">            box-sizing: border-box;</p>
-<p class="p1">            font-family: 'Arial', sans-serif;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        body {</p>
-<p class="p1">            background-color: #f7f6f2; /* Light, neutral wellness tone */</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        /* Header Styles */</p>
-<p class="p1">        header {</p>
-<p class="p1">            background-color: #4a7043; /* Soothing green for wellness */</p>
-<p class="p1">            color: white;</p>
-<p class="p1">            padding: 1rem;</p>
-<p class="p1">            display: flex;</p>
-<p class="p1">            justify-content: space-between;</p>
-<p class="p1">            align-items: center;</p>
-<p class="p1">            position: sticky;</p>
-<p class="p1">            top: 0;</p>
-<p class="p1">            z-index: 1000;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        header .logo {</p>
-<p class="p1">            font-size: 1.8rem;</p>
-<p class="p1">            font-weight: bold;</p>
-<p class="p1">            font-family: 'Georgia', serif;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        header nav a {</p>
-<p class="p1">            color: white;</p>
-<p class="p1">            text-decoration: none;</p>
-<p class="p1">            margin: 0 1.2rem;</p>
-<p class="p1">            font-size: 1rem;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        header .search-bar {</p>
-<p class="p1">            display: flex;</p>
-<p class="p1">            align-items: center;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        header .search-bar input {</p>
-<p class="p1">            padding: 0.5rem 1rem;</p>
-<p class="p1">            border: none;</p>
-<p class="p1">            border-radius: 20px;</p>
-<p class="p1">            width: 250px;</p>
-<p class="p1">            background-color: #f5f5f5;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        /* Main Content (Pin Grid) */</p>
-<p class="p1">        .pin-container {</p>
-<p class="p1">            display: grid;</p>
-<p class="p1">            grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));</p>
-<p class="p1">            gap: 1.5rem;</p>
-<p class="p1">            padding: 2rem;</p>
-<p class="p1">            max-width: 1200px;</p>
-<p class="p1">            margin: 0 auto;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        .pin {</p>
-<p class="p1">            background-color: white;</p>
-<p class="p1">            border-radius: 16px;</p>
-<p class="p1">            overflow: hidden;</p>
-<p class="p1">            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);</p>
-<p class="p1">            transition: transform 0.3s ease;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        .pin:hover {</p>
-<p class="p1">            transform: scale(1.03);</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        .pin img {</p>
-<p class="p1">            width: 100%;</p>
-<p class="p1">            height: 280px;</p>
-<p class="p1">            object-fit: cover;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        .pin-content {</p>
-<p class="p1">            padding: 1rem;</p>
-<p class="p1">            text-align: center;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        .pin-content h3 {</p>
-<p class="p1">            font-size: 1.1rem;</p>
-<p class="p1">            color: #333;</p>
-<p class="p1">            margin-bottom: 0.5rem;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        .pin-content p {</p>
-<p class="p1">            font-size: 0.9rem;</p>
-<p class="p1">            color: #666;</p>
-<p class="p1">            margin-bottom: 1rem;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        .pin-content button {</p>
-<p class="p1">            background-color: #4a7043;</p>
-<p class="p1">            color: white;</p>
-<p class="p1">            border: none;</p>
-<p class="p1">            padding: 0.5rem 1rem;</p>
-<p class="p1">            border-radius: 20px;</p>
-<p class="p1">            cursor: pointer;</p>
-<p class="p1">            font-size: 0.9rem;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        .pin-content button:hover {</p>
-<p class="p1">            background-color: #5a8a50;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        /* Footer Styles */</p>
-<p class="p1">        footer {</p>
-<p class="p1">            background-color: #2f4f4f; /* Dark slate for balance */</p>
-<p class="p1">            color: white;</p>
-<p class="p1">            text-align: center;</p>
-<p class="p1">            padding: 1.5rem;</p>
-<p class="p1">            margin-top: 2rem;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        footer a {</p>
-<p class="p1">            color: #a8d5ba;</p>
-<p class="p1">            text-decoration: none;</p>
-<p class="p1">            margin: 0 0.5rem;</p>
-<p class="p1">        }</p>
-<p class="p2"><br></p>
-<p class="p1">        /* Responsive Design */</p>
-<p class="p1">        @media (max-width: 768px) {</p>
-<p class="p1">            header {</p>
-<p class="p1">                flex-direction: column;</p>
-<p class="p1">                gap: 1rem;</p>
-<p class="p1">                padding: 1.5rem;</p>
-<p class="p1">            }</p>
-<p class="p2"><br></p>
-<p class="p1">            header .search-bar input {</p>
-<p class="p1">                width: 100%;</p>
-<p class="p1">            }</p>
-<p class="p2"><br></p>
-<p class="p1">            .pin-container {</p>
-<p class="p1">                grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));</p>
-<p class="p1">                padding: 1rem;</p>
-<p class="p1">            }</p>
-<p class="p1">        }</p>
-<p class="p1">    &lt;/style&gt;</p>
+<p class="p1"><span class="Apple-converted-space">    </span>&lt;meta charset="UTF-8"&gt;</p>
+<p class="p1"><span class="Apple-converted-space">    </span>&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</p>
+<p class="p1"><span class="Apple-converted-space">    </span>&lt;meta name="p:domain_verify" content="e0a87e13a8b3dc61acbf353802f78442"/&gt;</p>
+<p class="p1"><span class="Apple-converted-space">    </span>&lt;title&gt;Health and Wellness&lt;/title&gt;</p>
 <p class="p1">&lt;/head&gt;</p>
 <p class="p1">&lt;body&gt;</p>
-<p class="p1">    &lt;!-- Header Section --&gt;</p>
-<p class="p1">    &lt;header&gt;</p>
-<p class="p1">        &lt;div class="logo"&gt;Wellness Pin Claim&lt;/div&gt;</p>
-<p class="p1">        &lt;nav&gt;</p>
-<p class="p1">            &lt;a href="#home"&gt;Home&lt;/a&gt;</p>
-<p class="p1">            &lt;a href="#wellness"&gt;Wellness Tips&lt;/a&gt;</p>
-<p class="p1">            &lt;a href="#recipes"&gt;Healthy Recipes&lt;/a&gt;</p>
-<p class="p1">            &lt;a href="#meditation"&gt;Meditation&lt;/a&gt;</p>
-<p class="p1">            &lt;a href="#profile"&gt;My Claims&lt;/a&gt;</p>
-<p class="p1">        &lt;/nav&gt;</p>
-<p class="p1">        &lt;div class="search-bar"&gt;</p>
-<p class="p1">            &lt;input type="text" placeholder="Search wellness ideas..."&gt;</p>
-<p class="p1">        &lt;/div&gt;</p>
-<p class="p1">    &lt;/header&gt;</p>
-<p class="p2"><br></p>
-<p class="p1">    &lt;!-- Main Content Section --&gt;</p>
-<p class="p1">    &lt;main&gt;</p>
-<p class="p1">        &lt;section class="pin-container"&gt;</p>
-<p class="p1">            &lt;!-- Pin 1: Meditation Guide --&gt;</p>
-<p class="p1">            &lt;article class="pin"&gt;</p>
-<p class="p1">                &lt;img src="https://via.placeholder.com/240x280?text=Meditation" alt="Meditation Guide"&gt;</p>
-<p class="p1">                &lt;div class="pin-content"&gt;</p>
-<p class="p1">                    &lt;h3&gt;5-Minute Morning Meditation&lt;/h3&gt;</p>
-<p class="p1">                    &lt;p&gt;Start your day with calm and focus.&lt;/p&gt;</p>
-<p class="p1">                    &lt;button&gt;Claim Pin&lt;/button&gt;</p>
-<p class="p1">                &lt;/div&gt;</p>
-<p class="p1">            &lt;/article&gt;</p>
-<p class="p1">            &lt;!-- Pin 2: Healthy Smoothie --&gt;</p>
-<p class="p1">            &lt;article class="pin"&gt;</p>
-<p class="p1">                &lt;img src="https://via.placeholder.com/240x280?text=Smoothie" alt="Healthy Smoothie"&gt;</p>
-<p class="p1">                &lt;div class="pin-content"&gt;</p>
-<p class="p1">                    &lt;h3&gt;Green Detox Smoothie&lt;/h3&gt;</p>
-<p class="p1">                    &lt;p&gt;Boost your energy with this nutrient-packed recipe.&lt;/p&gt;</p>
-<p class="p1">                    &lt;button&gt;Claim Pin&lt;/button&gt;</p>
-<p class="p1">                &lt;/div&gt;</p>
-<p class="p1">            &lt;/article&gt;</p>
-<p class="p1">            &lt;!-- Pin 3: Yoga Routine --&gt;</p>
-<p class="p1">            &lt;article class="pin"&gt;</p>
-<p class="p1">                &lt;img src="https://via.placeholder.com/240x280?text=Yoga" alt="Yoga Routine"&gt;</p>
-<p class="p1">                &lt;div class="pin-content"&gt;</p>
-<p class="p1">                    &lt;h3&gt;10-Minute Yoga Flow&lt;/h3&gt;</p>
-<p class="p1">                    &lt;p&gt;Stretch and strengthen with this daily routine.&lt;/p&gt;</p>
-<p class="p1">                    &lt;button&gt;Claim Pin&lt;/button&gt;</p>
-<p class="p1">                &lt;/div&gt;</p>
-<p class="p1">            &lt;/article&gt;</p>
-<p class="p1">            &lt;!-- Pin 4: Mindfulness Journal --&gt;</p>
-<p class="p1">            &lt;article class="pin"&gt;</p>
-<p class="p1">                &lt;img src="https://via.placeholder.com/240x280?text=Journal" alt="Mindfulness Journal"&gt;</p>
-<p class="p1">                &lt;div class="pin-content"&gt;</p>
-<p class="p1">                    &lt;h3&gt;Mindfulness Journal Prompts&lt;/h3&gt;</p>
-<p class="p1">                    &lt;p&gt;Reflect and grow with daily writing exercises.&lt;/p&gt;</p>
-<p class="p1">                    &lt;button&gt;Claim Pin&lt;/button&gt;</p>
-<p class="p1">                &lt;/div&gt;</p>
-<p class="p1">            &lt;/article&gt;</p>
-<p class="p1">            &lt;!-- Add more pins as needed --&gt;</p>
-<p class="p1">        &lt;/section&gt;</p>
-<p class="p1">    &lt;/main&gt;</p>
-<p class="p2"><br></p>
-<p class="p1">    &lt;!-- Footer Section --&gt;</p>
-<p class="p1">    &lt;footer&gt;</p>
-<p class="p1">        &lt;p&gt;&amp;copy; 2025 Wellness Pin Claim. All rights reserved.&lt;/p&gt;</p>
-<p class="p1">        &lt;p&gt;&lt;a href="#about"&gt;About&lt;/a&gt; | &lt;a href="#privacy"&gt;Privacy Policy&lt;/a&gt; | &lt;a href="#contact"&gt;Contact&lt;/a&gt;&lt;/p&gt;</p>
-<p class="p1">    &lt;/footer&gt;</p>
+<p class="p1"><span class="Apple-converted-space">    </span>&lt;h1&gt;Welcome to My Health &amp; Wellness Blog!&lt;/h1&gt;</p>
 <p class="p1">&lt;/body&gt;</p>
 <p class="p1">&lt;/html&gt;</p>
 </body>
