--- a/index.html
+++ b/index.html
@@ -8,19 +8,60 @@
   <meta name="CocoaVersion" content="2113.65">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
   </style>
 </head>
 <body>
 <p class="p1">&lt;!DOCTYPE html&gt;</p>
 <p class="p1">&lt;html lang="en"&gt;</p>
 <p class="p1">&lt;head&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;meta charset="UTF-8"&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;meta name="p:domain_verify" content="e0a87e13a8b3dc61acbf353802f78442"/&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;title&gt;Health and Wellness&lt;/title&gt;</p>
+<p class="p1">    &lt;meta charset="UTF-8"&gt;</p>
+<p class="p1">    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</p>
+<p class="p1">    &lt;meta name="p:domain_verify" content="e0a87e13a8b3dc61acbf353802f78442"/&gt;</p>
+<p class="p1">    &lt;title&gt;Angie’s Health &amp; Wellness&lt;/title&gt;</p>
+<p class="p1">    &lt;style&gt;</p>
+<p class="p1">        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; max-width: 900px; }</p>
+<p class="p1">        h1, h2 { color: #2E7D32; }</p>
+<p class="p1">        img { max-width: 100%; height: auto; border-radius: 8px; margin-bottom: 10px; }</p>
+<p class="p1">        .section { margin-bottom: 40px; }</p>
+<p class="p1">        footer { margin-top: 40px; font-size: 0.9em; color: #555; text-align: center; }</p>
+<p class="p1">        ul { list-style-type: square; }</p>
+<p class="p1">    &lt;/style&gt;</p>
 <p class="p1">&lt;/head&gt;</p>
 <p class="p1">&lt;body&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;h1&gt;Welcome to My Health &amp; Wellness Blog!&lt;/h1&gt;</p>
+<p class="p1">    &lt;h1&gt;Welcome to Angie’s Health &amp; Wellness!&lt;/h1&gt;</p>
+<p class="p1">    &lt;p&gt;This is my space to share tips, advice, and inspiration for living a healthier, happier life.&lt;/p&gt;</p>
+<p class="p1">    </p>
+<p class="p1">    &lt;div class="section"&gt;</p>
+<p class="p1">        &lt;h2&gt;About Me&lt;/h2&gt;</p>
+<p class="p1">        &lt;img src="https://via.placeholder.com/800x300?text=Healthy+Lifestyle" alt="Healthy Lifestyle"&gt;</p>
+<p class="p1">        &lt;p&gt;Hi! I’m Angie, passionate about holistic health, fitness, and wellness. Here you’ll find ideas, routines, and inspiration to help you feel your best every day.&lt;/p&gt;</p>
+<p class="p1">    &lt;/div&gt;</p>
+<p class="p2"><br></p>
+<p class="p1">    &lt;div class="section"&gt;</p>
+<p class="p1">        &lt;h2&gt;Featured Topics&lt;/h2&gt;</p>
+<p class="p1">        &lt;div&gt;</p>
+<p class="p1">            &lt;img src="https://via.placeholder.com/800x200?text=Nutrition+Tips" alt="Nutrition Tips"&gt;</p>
+<p class="p1">            &lt;p&gt;&lt;strong&gt;Nutrition &amp; Healthy Eating:&lt;/strong&gt; Easy tips for balanced meals and mindful eating.&lt;/p&gt;</p>
+<p class="p1">        &lt;/div&gt;</p>
+<p class="p1">        &lt;div&gt;</p>
+<p class="p1">            &lt;img src="https://via.placeholder.com/800x200?text=Fitness+Routine" alt="Fitness Routine"&gt;</p>
+<p class="p1">            &lt;p&gt;&lt;strong&gt;Fitness &amp; Exercise:&lt;/strong&gt; Simple routines to stay active at home or on the go.&lt;/p&gt;</p>
+<p class="p1">        &lt;/div&gt;</p>
+<p class="p1">        &lt;div&gt;</p>
+<p class="p1">            &lt;img src="https://via.placeholder.com/800x200?text=Mindfulness+Practice" alt="Mindfulness Practice"&gt;</p>
+<p class="p1">            &lt;p&gt;&lt;strong&gt;Mindfulness &amp; Self-Care:&lt;/strong&gt; Practical ways to relax, reduce stress, and boost mental wellness.&lt;/p&gt;</p>
+<p class="p1">        &lt;/div&gt;</p>
+<p class="p1">    &lt;/div&gt;</p>
+<p class="p2"><br></p>
+<p class="p1">    &lt;div class="section"&gt;</p>
+<p class="p1">        &lt;h2&gt;Connect with Me&lt;/h2&gt;</p>
+<p class="p1">        &lt;p&gt;Follow me on Pinterest or email me at &lt;a href="mailto:example@email.com"&gt;example@email.com&lt;/a&gt; to get in touch.&lt;/p&gt;</p>
+<p class="p1">    &lt;/div&gt;</p>
+<p class="p2"><br></p>
+<p class="p1">    &lt;footer&gt;</p>
+<p class="p1">        &amp;copy; 2025 Angie’s Health &amp; Wellness</p>
+<p class="p1">    &lt;/footer&gt;</p>
 <p class="p1">&lt;/body&gt;</p>
 <p class="p1">&lt;/html&gt;</p>
 </body>
