--- a/index.html
+++ b/index.html
@@ -1,52 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="p:domain_verify" content="e0a87e13a8b3dc61acbf353802f78442"/>
-    <title>Angie’s Health & Wellness</title>
-    <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; max-width: 900px; }
-        h1, h2 { color: #2E7D32; }
-        img { max-width: 100%; height: auto; border-radius: 8px; margin-bottom: 10px; }
-        .section { margin-bottom: 40px; }
-        footer { margin-top: 40px; font-size: 0.9em; color: #555; text-align: center; }
-        ul { list-style-type: square; }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="p:domain_verify" content="e0a87e13a8b3dc61acbf353802f78442"/>
+    <title>Angie’s Health & Wellness</title>
+    <style>
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; max-width: 900px; }
+        h1, h2 { color: #2E7D32; }
+        img { max-width: 100%; height: auto; border-radius: 8px; margin-bottom: 10px; }
+        .section { margin-bottom: 40px; }
+        footer { margin-top: 40px; font-size: 0.9em; color: #555; text-align: center; }
+        ul { list-style-type: square; }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Angie’s Health & Wellness!</h1>
-    <p>This is my space to share tips, advice, and inspiration for living a healthier, happier life.</p>
-    
-    <div class="section">
-        <h2>About Me</h2>
-        <img src="https://via.placeholder.com/800x300?text=Healthy+Lifestyle" alt="Healthy Lifestyle">
-        <p>Hi! I’m Angie, passionate about holistic health, fitness, and wellness. Here you’ll find ideas, routines, and inspiration to help you feel your best every day.</p>
-    </div>
+    <h1>Welcome to Angie’s Health & Wellness!</h1>
+    <p>This is my space to share tips, advice, and inspiration for living a healthier, happier life.</p>
+    
+    <div class="section">
+        <h2>About Me</h2>
+        <img src="healthy-lifestyle.jpg" alt="Healthy Lifestyle">
+        <p>Hi! I’m Angie, passionate about holistic health, fitness, and wellness. Here you’ll find ideas, routines, and inspiration to help you feel your best every day.</p>
+    </div>
 
-    <div class="section">
-        <h2>Featured Topics</h2>
-        <div>
-            <img src="https://via.placeholder.com/800x200?text=Nutrition+Tips" alt="Nutrition Tips">
-            <p><strong>Nutrition & Healthy Eating:</strong> Easy tips for balanced meals and mindful eating.</p>
-        </div>
-        <div>
-            <img src="https://via.placeholder.com/800x200?text=Fitness+Routine" alt="Fitness Routine">
-            <p><strong>Fitness & Exercise:</strong> Simple routines to stay active at home or on the go.</p>
-        </div>
-        <div>
-            <img src="https://via.placeholder.com/800x200?text=Mindfulness+Practice" alt="Mindfulness Practice">
-            <p><strong>Mindfulness & Self-Care:</strong> Practical ways to relax, reduce stress, and boost mental wellness.</p>
-        </div>
-    </div>
+    <div class="section">
+        <h2>Featured Topics</h2>
+        <div>
+            <img src="fitness-routine.jpg" alt="Fitness Routine">
+            <p><strong>Fitness & Exercise:</strong> Simple routines to stay active at home or on the go.</p>
+        </div>
+        <div>
+            <img src="mindfulness.jpg" alt="Mindfulness Practice">
+            <p><strong>Mindfulness & Self-Care:</strong> Practical ways to relax, reduce stress, and boost mental wellness.</p>
+        </div>
+    </div>
 
-    <div class="section">
-        <h2>Connect with Me</h2>
-        <p>Follow me on Pinterest or email me at <a href="mailto:example@email.com">example@email.com</a> to get in touch.</p>
-    </div>
+    <div class="section">
+        <h2>Connect with Me</h2>
+        <p>Follow me on Pinterest or email me at <a href="mailto:example@email.com">example@email.com</a> to get in touch.</p>
+    </div>
 
-    <footer>
-        &copy; 2025 Angie’s Health & Wellness
-    </footer>
+    <footer>
+        &copy; 2025 Angie’s Health & Wellness
+    </footer>
 </body>
 </html>
